Implémentation de la route PUT permettant de mettre à jour les informations d'un artiste par son id
